@@ -758,6 +758,12 @@ for ldap providers in the same way as above does.
 </property>
 
 <property>
+  <name>fs.s3a.connection.establish.timeout</name>
+  <value>5000</value>
+  <description>Socket connection setup timeout in seconds.</description>
+</property>
+
+<property>
   <name>fs.s3a.connection.timeout</name>
   <value>50000</value>
   <description>Socket connection timeout in seconds.</description>
