@@ -1170,6 +1170,20 @@ argument_list|)
 expr_stmt|;
 name|awsConf
 operator|.
+name|setConnectionTimeout
+argument_list|(
+name|conf
+operator|.
+name|getInt
+argument_list|(
+name|ESTABLISH_TIMEOUT
+argument_list|,
+name|DEFAULT_ESTABLISH_TIMEOUT
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|awsConf
+operator|.
 name|setSocketTimeout
 argument_list|(
 name|conf
